rewrite(!!!): start massive overhaul of how proxies and annotation processing works to make it far simpler, more readable and convenient;
remove Id annotation, will be replaced later;

remove Composed annotation, is replaced by far more predictable and less annoying UnfoldsInto;